feat : create and update agenda api
